// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Buttons block color customization sets a background color 1`] = `
"<!-- fp:buttons -->
<div class="fp-block-buttons"><!-- fp:button {"backgroundColor":"luminous-vivid-amber"} -->
<div class="fp-block-button"><a class="fp-block-button__link has-luminous-vivid-amber-background-color has-background fp-element-button" href=""></a></div>
<!-- /fp:button --></div>
<!-- /fp:buttons -->"
`;

exports[`Buttons block color customization sets a custom gradient background color 1`] = `
"<!-- fp:buttons -->
<div class="fp-block-buttons"><!-- fp:button {"style":{"color":{"gradient":"linear-gradient(200deg,rgb(122,220,180) 0%,rgb(0,208,130) 100%)"}}} -->
<div class="fp-block-button"><a class="fp-block-button__link has-background fp-element-button" href="" style="background:linear-gradient(200deg,rgb(122,220,180) 0%,rgb(0,208,130) 100%)"></a></div>
<!-- /fp:button --></div>
<!-- /fp:buttons -->"
`;

exports[`Buttons block color customization sets a gradient background color 1`] = `
"<!-- fp:buttons -->
<div class="fp-block-buttons"><!-- fp:button {"gradient":"light-green-cyan-to-vivid-green-cyan"} -->
<div class="fp-block-button"><a class="fp-block-button__link has-light-green-cyan-to-vivid-green-cyan-gradient-background has-background fp-element-button" href=""></a></div>
<!-- /fp:button --></div>
<!-- /fp:buttons -->"
`;

exports[`Buttons block color customization sets a text color 1`] = `
"<!-- fp:buttons -->
<div class="fp-block-buttons"><!-- fp:button {"textColor":"pale-pink"} -->
<div class="fp-block-button"><a class="fp-block-button__link has-pale-pink-color has-text-color fp-element-button" href=""></a></div>
<!-- /fp:button --></div>
<!-- /fp:buttons -->"
`;

exports[`Buttons block justify content sets Justify items center option 1`] = `
"<!-- fp:buttons {"layout":{"type":"flex","justifyContent":"center"}} -->
<div class="fp-block-buttons"><!-- fp:button -->
<div class="fp-block-button"><a class="fp-block-button__link fp-element-button"></a></div>
<!-- /fp:button --></div>
<!-- /fp:buttons -->"
`;

exports[`Buttons block justify content sets Justify items left option 1`] = `
"<!-- fp:buttons {"layout":{"type":"flex","justifyContent":"left"}} -->
<div class="fp-block-buttons"><!-- fp:button -->
<div class="fp-block-button"><a class="fp-block-button__link fp-element-button"></a></div>
<!-- /fp:button --></div>
<!-- /fp:buttons -->"
`;

exports[`Buttons block justify content sets Justify items right option 1`] = `
"<!-- fp:buttons {"layout":{"type":"flex","justifyContent":"right"}} -->
<div class="fp-block-buttons"><!-- fp:button -->
<div class="fp-block-button"><a class="fp-block-button__link fp-element-button"></a></div>
<!-- /fp:button --></div>
<!-- /fp:buttons -->"
`;

exports[`Buttons block when a button is shown adds another button using the inline appender 1`] = `
"<!-- fp:buttons -->
<div class="fp-block-buttons"><!-- fp:button -->
<div class="fp-block-button"><a class="fp-block-button__link fp-element-button" href=""></a></div>
<!-- /fp:button -->

<!-- fp:button -->
<div class="fp-block-button"><a class="fp-block-button__link fp-element-button" href=""></a></div>
<!-- /fp:button --></div>
<!-- /fp:buttons -->

<!-- fp:paragraph -->
<p></p>
<!-- /fp:paragraph -->"
`;

exports[`Buttons block when a button is shown adds another button using the inserter 1`] = `
"<!-- fp:buttons -->
<div class="fp-block-buttons"><!-- fp:button -->
<div class="fp-block-button"><a class="fp-block-button__link fp-element-button" href=""></a></div>
<!-- /fp:button -->

<!-- fp:button -->
<div class="fp-block-button"><a class="fp-block-button__link fp-element-button">Hello!</a></div>
<!-- /fp:button --></div>
<!-- /fp:buttons -->"
`;

exports[`Buttons block when a button is shown adjusts the border radius 1`] = `
"<!-- fp:buttons -->
<div class="fp-block-buttons"><!-- fp:button {"style":{"border":{"radius":"6px"}}} -->
<div class="fp-block-button"><a class="fp-block-button__link fp-element-button" href="" style="border-radius:6px">Hello</a></div>
<!-- /fp:button --></div>
<!-- /fp:buttons -->"
`;

exports[`Buttons block when a button is shown removing button along with buttons block removes the button and buttons block when deleting the block using the block delete action 1`] = `
"<!-- fp:paragraph -->
<p></p>
<!-- /fp:paragraph -->"
`;
